# USACO

./: CMakeLists.txt  README.md  template.cpp
22-Dec-Bronze/: CowCollege.cpp
bronze/2022-dec/: CowCollege.cpp  FeedingTheCows.cpp  ReverseEngineering.cpp
bronze/2023-dec/: CandyCaneFeast.cpp  CowntactTracing2.cpp  FarmerJohnActuallyFarms.cpp
