cmake_minimum_required(VERSION 3.27)
project(USACO)

set(CMAKE_CXX_STANDARD 17)

# Create executables with proper target names
add_executable(CowCollege "22-Dec-Bronze/CowCollege.cpp")
add_executable(FeedingTheCows "22-Dec-Bronze/FeedingTheCows.cpp")
add_executable(ReverseEngineering "22-Dec-Bronze/ReverseEngineering.cpp")
