cmake_minimum_required(VERSION 3.27)
project(USACO)

set(CMAKE_CXX_STANDARD 17)

# Create executables with proper target names
add_executable(CowCollege "bronze/2022-dec/CowCollege.cpp")
add_executable(FeedingTheCows "bronze/2022-dec/FeedingTheCows.cpp")
add_executable(ReverseEngineering "bronze/2022-dec/ReverseEngineering.cpp")
add_executable(Leaders "bronze/2023-jan/Leaders.cpp")
