cmake_minimum_required(VERSION 3.27)
project(USACO)

set(CMAKE_CXX_STANDARD 17)

add_executable(CowCollege "bronze/2022-dec/CowCollege.cpp")
add_executable(FeedingTheCows "bronze/2022-dec/FeedingTheCows.cpp")
add_executable(ReverseEngineering "bronze/2022-dec/ReverseEngineering.cpp")
add_executable(CandyCaneFeast "bronze/2023-dec/CandyCaneFeast.cpp")
add_executable(CowntactTracing2 "bronze/2023-dec/CowntactTracing2.cpp")
add_executable(FarmerJohnActuallyFarms "bronze/2023-dec/FarmerJohnActuallyFarms.cpp")
